feat:新增租户套餐
